After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 727559 - g_file_copy: Don't set GError when we intend to ignore errors
g_file_copy: Don't set GError when we intend to ignore errors
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2014-04-03 18:07 UTC by Colin Walters
Modified: 2014-05-07 12:00 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
g_file_copy: Don't set GError when we intend to ignore errors (994 bytes, patch)
2014-04-03 18:07 UTC, Colin Walters
committed Details | Review

Description Colin Walters 2014-04-03 18:07:07 UTC
For better or worse, the current g_file_copy intention was to ignore
errors copying metadata, but we still set the GError, while returning
TRUE.
Comment 1 Colin Walters 2014-04-03 18:07:09 UTC
Created attachment 273539 [details] [review]
g_file_copy: Don't set GError when we intend to ignore errors
Comment 2 Colin Walters 2014-04-10 00:31:37 UTC
mclasen reviewed this in person.
Comment 3 Colin Walters 2014-04-10 00:31:57 UTC
Attachment 273539 [details] pushed as 7089cf8 - g_file_copy: Don't set GError when we intend to ignore errors
Comment 4 David King 2014-05-07 10:20:58 UTC
It seems that the patch was only pushed to master. It is OK to also push it to glib-2-40 (and maybe 2-38, as that was where the bug was introduced, from a quick look at the git log)?
Comment 5 Colin Walters 2014-05-07 11:53:26 UTC
Yep, please do.
Comment 6 David King 2014-05-07 12:00:59 UTC
Pushed to glib-2-38 and glib-2-40. Thanks!